# sliding-windows

./: .gitignore  README.md
.github/workflows/: release.yml  test.yml
R/: sliding_windows.Rmd
results/: average-sliding-windows.csv  new-window.csv  sliding_windows_results.csv
rust/: Cargo.toml
rust/src/: main.rs
rust/tests/: test.txt
